--- a/src/styles/views/_files-view.scss
+++ b/src/styles/views/_files-view.scss
@@ -25,7 +25,7 @@
     background: rgba(51, 65, 85, 0.5);
   }
 
-  .files-view__toolbar-btn img {
+  .files-view__toolbar-icon {
     @apply w-4 h-4 object-contain;
   }
 
@@ -108,6 +108,19 @@
   .files-view__row.is-selected {
     @apply bg-cyan-400/10;
     box-shadow: inset 0 0 0 1px rgba(34, 211, 238, 0.2);
+  }
+
+  .files-view__row-icon {
+    @apply w-5 h-5 mr-2.5;
+    color: var(--mv-surface-text-secondary);
+  }
+
+  .files-view__row-icon--dir {
+    color: #67e8f9;
+  }
+
+  .files-view__row-icon--file {
+    color: var(--mv-surface-text-muted);
   }
 
   .files-view__name {
@@ -210,7 +223,7 @@
 
   .files-view__context-spacer,
   .files-view__context-icon {
-    @apply w-4 h-4 inline-block object-contain;
+    @apply w-4 h-4 inline-block;
   }
 }
 
